versioned_docs/version-4.0.x/reference/functions/Register-ADTDll.mdx
---
id: Register-ADTDll
title: Register-ADTDll
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Register a DLL file.

## SYNTAX

```powershell
Register-ADTDll [-FilePath] <String> [<CommonParameters>]
```

## DESCRIPTION

This function registers a DLL file using regsvr32.exe.
It ensures that the specified DLL file exists before attempting to register it.
If the file does not exist, it throws an error.

## EXAMPLES

### EXAMPLE 1

```powershell
Register-ADTDll -FilePath "C:\Test\DcTLSFileToDMSComp.dll"
```

Registers the specified DLL file.

## PARAMETERS

### -FilePath

Path to the DLL file.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return objects.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Register-ADTDll](./Register-ADTDll.mdx)
